--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
         "vue": "^2.5.7"
     },
     "dependencies": {
-        "bootstrap-vue": "^2.17.3"
+        "bootstrap-vue": "^2.17.3",
+        "laravel-echo": "^1.9.0",
+        "pusher-js": "^7.0.0"
     }
 }
