--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dependencies": {
         "bootstrap-vue": "^2.17.3",
         "laravel-echo": "^1.9.0",
+        "moment": "^2.29.1",
         "pusher-js": "^7.0.0"
     }
 }
